fix alignments for mobile phones

--- a/css/style.css
+++ b/css/style.css
@@ -123,16 +123,16 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #intro {
   width: 100%;
-  height: 600pt;
+  height: 370pt;
   background: linear-gradient(45deg, rgba(29, 224, 153, 0.8), rgba(29, 200, 205, 0.8)), url("../img/intro-bg.jpg") center top no-repeat;
   background-size: cover;
-  position: absolute;
+  position: relative;
 }
 
 #intro .intro-text {
   position: absolute;
   left: 0;
-  top: 70px;
+  top: 40%;
   right: 0;
   height: calc(50% - 60px);
   display: flex;
@@ -413,6 +413,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #111;
   text-align: center;
   font-weight: 400;
+  position: auto;
 }
 
 .section-header .section-description {
@@ -618,6 +619,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* Clients Section
 --------------------------------*/
 #clients {
+  position: auto;
+  top: -200px;
   padding: 30px 0;
   background: #fff;
   overflow: hidden;
